Sprint 5. InMemoryHistoryManager getHistory was updated by returning copy of history
InMemoryTaskManagerTest was completed